--- a/app/notebook/lstm_gru.ipynb
+++ b/app/notebook/lstm_gru.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -16,15 +16,12 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "from setuptools.dist import sequence\n",
-    "\n",
-    "from cnn_1 import history_ann"
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "791971d889ed3b0d",
    "metadata": {
     "ExecuteTime": {
@@ -34,7 +31,7 @@
    },
    "outputs": [],
    "source": [
-    "df =  pd.read_csv('qoute_dataset.csv')"
+    "df =  pd.read_csv('/data/quotes.csv')"
    ]
   },
   {
